added the base setup for the shopify

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,9 @@
 
 <h2>Webhooks</h2>
 
+
+<h3> hello world</h3>
+
 <% if @webhooks.present? %>
   <ul>
     <% @webhooks.each do |webhook| %>
@@ -34,3 +37,8 @@
 <% @orders.each do |order| %>
   <%= order.id %>
 <% end %>
+<h2>Indrajit</h2>
+
+
+
+<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
