--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,3 +42,5 @@
 
 
 <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+
+<%= link_to " View all the products",products_path%>
